[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.2"

[[bin]]
name = "tcp-echo-server"
path = "src/tcp-echo-server.rs"

[[bin]]
name = "tcp-echo-cli"
path = "src/tcp-echo-cli.rs"
